crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@59.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('[]', 'strict $[\"a\"]');"
---
SelectStmt@0..47
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..45
    FuncCall@7..45
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..28
        Sconst@24..28 "'[]'"
      Ascii44@28..29 ","
      Whitespace@29..30 " "
      AConst@30..45
        Sconst@30..45 "'strict $[\"a\"]'"
  Ascii41@45..46 ")"
  Ascii59@46..47 ";"

