crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@64.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('{\"a\": 12, \"b\": {\"a\": 13}}', '$.a');"
---
SelectStmt@0..60
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..58
    FuncCall@7..58
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..51
        Sconst@24..51 "'{\"a\": 12, \"b\": {\"a\": ..."
      Ascii44@51..52 ","
      Whitespace@52..53 " "
      AConst@53..58
        Sconst@53..58 "'$.a'"
  Ascii41@58..59 ")"
  Ascii59@59..60 ";"

